# oughtred-tooling

./: README.md
action-templates/: al_archiveOldReleases.yaml  al_updateApiEndpoints.yaml  archiveOldReleases.yaml
scripts/: moveRelease.ps1  moveRelease.sh
tooling/: .gitignore  pyproject.toml
tooling/src/oughtred_tooling/: al_parser.py  cli.py
