[project]
name = "oughtred-tooling"
version = "0.1.0"
description = "tooling for oughtred"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]


dependencies = [
    "click>=8.1.7",
    "toml>=0.10.2",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/oughtred_tooling"]

[project.scripts]
octool = "oughtred_tooling.cli:cli"